fix: Fix active Input color overflow for RTL languages in the Search dialog - Using margin-right doesn't work well with RTL languages, use margin-inline-end instead

--- a/www/src/styles/algolia/style.css
+++ b/www/src/styles/algolia/style.css
@@ -63,7 +63,7 @@ html.dark {
 }
 .DocSearch-Search-Icon {
   stroke-width: 1.6;
-  margin-right: 15px;
+  margin-inline-end: 15px;
 }
 .DocSearch-Button .DocSearch-Search-Icon {
   color: var(--docsearch-text-color);
